--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-  margin: 0;
+  margin: auto;
+  max-width: 1500px;
 }
 
 .hamburger-menu {
@@ -7,111 +8,111 @@ body {
 }
 
 .title {
-    font: bold 22px Gotham Pro;
-    text-align: center;
-    text-transform: uppercase;
-    margin-bottom: 15px;
+  font: bold 22px Gotham Pro;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 15px;
 }
 
 /* Arrow */
 .arrow {
-    cursor: pointer;
-    position: relative;
-    margin-left: 10px;
+  cursor: pointer;
+  position: relative;
+  margin-left: 10px;
 }
 
 .arrow div {
-    position: relative;
-    top: 5px;
-    width: 45px;
-    height: 1px;
-    background-color: #fff;
-    display: block;
+  position: relative;
+  top: 5px;
+  width: 45px;
+  height: 1px;
+  background-color: #fff;
+  display: block;
 }
 .arrow div::after {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 1px;
-    top: -3px;
-    right: -1px;
-    background-color: #fff;
-    transform: rotate(45deg);
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 1px;
+  top: -3px;
+  right: -1px;
+  background-color: #fff;
+  transform: rotate(45deg);
 }
 .arrow div::before {
-    content: '';
-    position: absolute;
-    width: 8px;
-    height: 1px;
-    top: 3px;
-    right: -1px;
-    background-color: #fff;
-    transform: rotate(-45deg);
+  content: '';
+  position: absolute;
+  width: 8px;
+  height: 1px;
+  top: 3px;
+  right: -1px;
+  background-color: #fff;
+  transform: rotate(-45deg);
 }
 .arrow:hover {
-    animation: arrow 1s linear infinite;
+  animation: arrow 1s linear infinite;
 }
 @keyframes arrow {
-    0% {
-        left:0;
-    }
-    50% {
-        left:10px;
-    }
-    100% {
-        left:0;
-    }
+  0% {
+    left:0;
+  }
+  50% {
+    left:10px;
+  }
+  100% {
+    left:0;
+  }
 }
 
 /* Arrow black*/
 .arrow-black {
-    cursor: pointer;
-    position: relative;
-    margin-left: 10px;
-    margin-right: 10px;
+  cursor: pointer;
+  position: relative;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .arrow-black div {
-    position: relative;
-    top: 5px;
-    width: 28px;
-    height: 1px;
-    background-color: #000;
-    display: block;
+  position: relative;
+  top: 5px;
+  width: 28px;
+  height: 1px;
+  background-color: #000;
+  display: block;
 }
 .arrow-black div::after {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 1px;
-    top: -3px;
-    right: 0px;
-    background-color: #000;
-    transform: rotate(45deg);
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 1px;
+  top: -3px;
+  right: 0px;
+  background-color: #000;
+  transform: rotate(45deg);
 }
 .arrow-black div::before {
-    content: '';
-    position: absolute;
-    width: 6px;
-    height: 1px;
-    top: 3px;
-    right: 0px;
-    background-color: #000;
-    transform: rotate(-45deg);
+  content: '';
+  position: absolute;
+  width: 6px;
+  height: 1px;
+  top: 3px;
+  right: 0px;
+  background-color: #000;
+  transform: rotate(-45deg);
 }
 .arrow-black:hover {
-    animation: arrow-black 1s linear infinite;
+  animation: arrow-black 1s linear infinite;
 }
 @keyframes arrow-black {
-    0% {
-        left:0;
-    }
-    50% {
-        left:10px;
-    }
-    100% {
-        left:0;
-    }
+  0% {
+    left:0;
+  }
+  50% {
+    left:10px;
+  }
+  100% {
+    left:0;
+  }
 }
 
 /* Header */
@@ -119,38 +120,113 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin: 40px 5% 50px 5%;
+  margin: 40px 5% 30px 5%;
 }
 
-.header div {
+.logo-main {
+  width: 55px;
+  height: 55px;
+  background: url(images/logo-big.png);
+  background-size: 55px 55px;
+}
+
+.menu-left {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.logo {
-  width: 55px;
-  height: 55px;
-  background: url(images/logo-big.svg);
-  background-size: 55px 55px;
+.menu-right {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .menu {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font: 500 12px/11px Gotham Pro;
 }
 
 .menu__item {
   text-decoration: none;
   color: #000;
+  margin-left: 35px;
+}
+
+.menu__item:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
+.menu__search-container {
+  position: relative;
+}
+
+.menu__search {
+  border-bottom: 2px solid #000;
+  opacity: 0.7;
+  border-top: none;
+  border-right: none;
+  border-left: none;
+  width: 170px;
+  height: 25px;
+  font-size: 12px;
+  float: left;
+}
+
+.icon{
+  position: absolute;
+  bottom: 5px;
+  right: 0;
+  margin-left: 17px;
+  margin-top: 17px;
+  z-index: 1;
+  color: #000;
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+.menu__language:hover .language-type {
+  display: block;
+  margin-left: 15px;
+}
+
+.menu__language {
+  position: relative;
+  display: inline-table;
+}
+
+.language {
+  margin-left: 35px;
+  border: none;
+  cursor: pointer;
+  background: none;
+}
+
+.language-type {
+  display: none;
+  position: absolute;
+}
+
+.menu__cart {
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  text-align: center;
+  align-items: center;
+  color: white;
+  background: black;
+  font: 900 10px/17px Gotham Pro;
+  margin-left: 5px;
 }
 
 /* Top */
 .top {
-  width: 1030px;
+  margin: 0 6% 50px 6%;
   height: 280px;
-  margin: 50px auto;
   position: relative;
   background: url(images/main.jpg);
 }
@@ -278,7 +354,7 @@ body {
 /* Video */
 .video {
   margin: auto;
-  height: 442px;
+  height: 494px;
   background-color: black;
   display: flex;
   align-items: center;
@@ -298,10 +374,25 @@ body {
 .video__play {
   width: 46px;
   height: 46px;
+  border-radius: 50%;
+  border: none;
+  box-shadow: 0px 0px 0px 7px rgba(255, 255, 255, 0.3);
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.triangle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 0;
+  height: 0;
+  border-top: 5px solid transparent;
+  border-left: 10px solid #7f7f7f;
+  border-bottom: 5px solid transparent;
 }
 
 .video__text {
@@ -336,7 +427,6 @@ body {
 }
 
 .story-box {
-  background-size: 307px 147px;
   width: 307px;
 }
 
@@ -372,7 +462,7 @@ body {
   display: flex;
   justify-content: left;
   font: 600 12px/11px Gotham Pro;
-  text-transform: uppercase;
+  text-transform: uppercase;30
 }
 
 .story-box__date {
@@ -396,6 +486,10 @@ body {
 .gallery__foto {
   width: 147px;
   height: 147px;
+}
+
+.gallery__foto:nth-child(8) {
+  display: none;
 }
 
 .gallery__tag {
@@ -453,6 +547,13 @@ p {
   margin-bottom: 35px;
   font-weight: bold;
   font-size: 10px;
+  cursor: pointer;
+}
+
+.footer__button:hover {
+  color: #01579b;
+  background-color: #ccc;
+  border-color: #01579b;
 }
 
 .footer__socialnets {
@@ -465,4 +566,236 @@ p {
   font: 400 12px Gotham Pro;
   text-align: justify;
   color: #fff;
+}
+
+
+@media (max-width: 1060px) {
+  .model:nth-child(n) {
+    background-size: 170px 173px;
+  }
+
+  .top {
+      height: 253px;
+  }
+
+  .video {
+    height: 442px;
+  }
+
+  .video__foto img {
+    width: 563px;
+    height: 309px;
+  }
+
+  .video__play {
+    width: 41px;
+    height: 41px;
+    box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.3);
+  }
+
+  .triangle {
+    border-top: 4px solid transparent;
+    border-left: 7px solid #7f7f7f;
+    border-bottom: 4px solid transparent;
+  }
+
+  .story-box {
+    width: 277px;
+  }
+
+  .story-box:nth-child(n) {
+    background-size: 277px 147px;
+  }
+
+  .gallery {
+    max-width: 924px;
+  }
+
+  .gallery__foto {
+    width: 132px;
+    height: 132px;
+  }
+}
+
+/* Tablet  */
+@media (max-width: 950px) {
+
+/* Header */
+  .menu-right {
+    display: none;
+  }
+
+  .menu-left {
+    display: none;
+  }
+
+  .logo-mobile {
+    width: 157px;
+    height: 34px;
+    background: url(images/logo-small.png);
+    background-size: 157px 34px;
+  }
+
+  /* Mobile hamburger */
+  .hamburger-menu {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 20px 5% 30px 5%;
+  }
+
+  .menu__btn {
+    position: fixed;
+    right: 8%;
+    width: 61px;
+    height: 26px;
+    cursor: pointer;
+    z-index: 1;
+  }
+
+  /* Отрисовка полосок бургера */
+  .menu__btn > span, .menu__btn > span::after {
+    display: block;
+    position: absolute;
+    width: 70px;
+    height: 9px;
+    background-color: #000;
+    transition-duration: .25s;
+  }
+
+  .menu__btn > span::after {
+    content: '';
+    top: 15px;
+  }
+
+  /* Отрисовка крестика вместо бургера */
+  #menu__toggle:checked ~ .menu__btn > span {
+    transform: rotate(45deg);
+  }
+  #menu__toggle:checked ~ .menu__btn > span::after {
+    top: 0;
+    transform: rotate(90deg);
+  }
+
+  #menu__toggle:checked ~ .menu {
+    left: 0;
+  }
+
+  #menu__toggle {
+    opacity: 0;
+  }
+
+/* Top */
+  .top__title {
+    font-size: 50px;
+    line-height: 48px;
+    margin-bottom: 30px;
+  }
+
+  .top__subtitle {
+    font-size: 20px;
+    line-height: 19px;
+  }
+
+/* Catalog */
+
+/* Video */
+
+/* Story */
+.story-box {
+  width: 313px;
+}
+
+.story-box:nth-child(n) {
+  background-size: 313px 165px;
+}
+
+.story-box:nth-child(3) {
+  display: none;
+}
+
+.story-box__title {
+  font-size: 25px;
+  line-height: 24px;
+}
+
+.story-box__subtitle {
+  font-size: 20px;
+  line-height: 25px;
+}
+
+  .story-box__more {
+    font-size: 20px;
+    line-height: 19px;
+  }
+
+/* Gallery */
+  .gallery {
+    max-width: 680px;
+  }
+
+  .gallery__fotos {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+
+  .gallery__foto {
+    width: 170px;
+    height: 170px;
+  }
+
+  .gallery__foto:nth-child(8) {
+    display: initial;
+  }
+
+/* Footer */
+.footer {
+  height: 240px;
+
+}
+
+.footer__columns {
+  width: 85%;
+}
+
+
+
+/* Mobile hamburger
+  .menu {
+    display: block;
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 80px 0;
+    list-style: none;
+    background-color: #fff;
+    transition-duration: .25s;
+  }
+
+  .menu__item {
+    display: block;
+    text-align: center;
+    padding: 20px;
+    color: #333;
+    font-family: 'Roboto', sans-serif;
+    font-size: 25px;
+    font-weight: 500;
+    text-decoration: none;
+    transition-duration: .25s;
+  }
+
+  /* Изменнение текста при наведении
+  .menu__item:hover {
+    background-color: #CFD8DC;
+  }
+
+  .menu__item:hover:after {
+    width: 0;
+  } */
+
+
+
 }
