--- a/style.css
+++ b/style.css
@@ -14,21 +14,22 @@ body {
   margin-bottom: 15px;
 }
 
-/* Arrow */
+/* Arrow white */
 .arrow {
   cursor: pointer;
   position: relative;
   margin-left: 10px;
+  top: 5px;
 }
 
 .arrow div {
   position: relative;
-  top: 5px;
   width: 45px;
   height: 1px;
   background-color: #fff;
   display: block;
 }
+
 .arrow div::after {
   content: '';
   position: absolute;
@@ -39,6 +40,7 @@ body {
   background-color: #fff;
   transform: rotate(45deg);
 }
+
 .arrow div::before {
   content: '';
   position: absolute;
@@ -322,7 +324,7 @@ body {
   background: black;
 }
 
-.model__cirle:nth-child(2) {
+.model__cirle_big {
   width: 9px;
   height: 9px;
 }
@@ -453,6 +455,10 @@ body {
   margin-bottom: 18px;
 }
 
+.story-box__subtitle:nth-child(2) {
+  margin-right: 8px;
+}
+
 .story-box__footer {
   display: flex;
   justify-content: space-between;
@@ -462,7 +468,7 @@ body {
   display: flex;
   justify-content: left;
   font: 600 12px/11px Gotham Pro;
-  text-transform: uppercase;30
+  text-transform: uppercase;
 }
 
 .story-box__date {
@@ -471,7 +477,7 @@ body {
 }
 
 /* Gallery */
-.gallery {
+.gallery{
   margin-bottom: 80px;
   display: flex;
   flex-direction: column;
@@ -570,14 +576,17 @@ p {
 
 
 @media (max-width: 1060px) {
+  /* Top */
+  .top {
+    height: 253px;
+  }
+
+  /* Catalog */
   .model:nth-child(n) {
     background-size: 170px 173px;
   }
 
-  .top {
-      height: 253px;
-  }
-
+  /* Video */
   .video {
     height: 442px;
   }
@@ -599,6 +608,7 @@ p {
     border-bottom: 4px solid transparent;
   }
 
+  /* Story */
   .story-box {
     width: 277px;
   }
@@ -607,7 +617,12 @@ p {
     background-size: 277px 147px;
   }
 
-  .gallery {
+  .story-box__subtitle:nth-child(2) {
+    margin-right: 10px;
+  }
+
+  /* Gallery */
+  .gallery{
     max-width: 924px;
   }
 
@@ -620,7 +635,40 @@ p {
 /* Tablet  */
 @media (max-width: 950px) {
 
-/* Header */
+  /* Arrows */
+
+  .arrow div {
+    top: 4px;
+    width: 70px;
+  }
+
+  .arrow-black div {
+    top: 6px;
+    width: 46px;
+    height: 2px;
+    background-color: #fff;
+  }
+
+  .arrow-black div::after {
+    width: 6px;
+    height: 2px;
+    top: -3px;
+    right: 0px;
+    background-color: #fff;
+  }
+
+  .arrow-black div::before {
+    width: 6px;
+    height: 2px;
+    top: 3px;
+    right: 0px;
+    background-color: #fff;
+  }
+
+  /* Header */
+  .header {
+    margin-bottom: 5px;
+  }
   .menu-right {
     display: none;
   }
@@ -685,7 +733,7 @@ p {
     opacity: 0;
   }
 
-/* Top */
+  /* Top */
   .top__title {
     font-size: 50px;
     line-height: 48px;
@@ -697,105 +745,211 @@ p {
     line-height: 19px;
   }
 
-/* Catalog */
+  .top {
+    margin: 0 0 20px 0;
+    height: 415px;
+    background-size: cover;
+    background-position: 20%;
+    position: relative;
+  }
 
-/* Video */
+  .top__text {
+    left: 27%;
+  }
 
-/* Story */
-.story-box {
-  width: 313px;
-}
+  .title {
+    font-size: 30px;
+    margin: 30px auto;
+  }
 
-.story-box:nth-child(n) {
-  background-size: 313px 165px;
-}
+  #title-black {
+    color: white;
+    background-color: black;
+    padding-top: 70px;
+    padding-bottom: 30px;
+    margin: 0;
+  }
 
-.story-box:nth-child(3) {
-  display: none;
-}
+  /* Catalog */
+  .model:nth-child(5), .model:nth-child(7) {
+    display: none;
+  }
+  .model__line:nth-child(even){
+    display: none;
+  }
 
-.story-box__title {
-  font-size: 25px;
-  line-height: 24px;
-}
+  .model:nth-child(n) {
+    background-size: 230px 230px;
+  }
 
-.story-box__subtitle {
-  font-size: 20px;
-  line-height: 25px;
-}
+  .model {
+    width: 260px;
+  }
 
-  .story-box__more {
+  .model__title {
+    margin-top: 250px;
     font-size: 20px;
     line-height: 19px;
   }
 
-/* Gallery */
-  .gallery {
-    max-width: 680px;
-  }
-
-  .gallery__fotos {
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .gallery__foto {
-    width: 170px;
-    height: 170px;
-  }
-
-  .gallery__foto:nth-child(8) {
-    display: initial;
-  }
-
-/* Footer */
-.footer {
-  height: 240px;
-
-}
-
-.footer__columns {
-  width: 85%;
-}
-
-
-
-/* Mobile hamburger
-  .menu {
-    display: block;
-    position: fixed;
-    top: 0;
-    left: -100%;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 80px 0;
-    list-style: none;
-    background-color: #fff;
-    transition-duration: .25s;
-  }
-
-  .menu__item {
-    display: block;
-    text-align: center;
-    padding: 20px;
-    color: #333;
-    font-family: 'Roboto', sans-serif;
+  .model__price {
     font-size: 25px;
-    font-weight: 500;
-    text-decoration: none;
-    transition-duration: .25s;
+    line-height: 24px;
   }
 
-  /* Изменнение текста при наведении
-  .menu__item:hover {
-    background-color: #CFD8DC;
+  .model__cirle {
+    width: 20px;
+    height: 20px;
   }
 
-  .menu__item:hover:after {
-    width: 0;
-  } */
+  /* Video */
+  .video {
+    flex-direction: column-reverse;
+    width: 100%;
+    margin: 0;
+    padding-top: 170px;
+    clip-path: polygon(
+      0 0, /* лево верх */
+      100% 5%, /* право верх */
+      100% 100%, /* право низ */
+      0 100% /* лево низ */
+      );
+    }
+
+    .video__more {
+      display: none;
+    }
+
+    .video__text {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+      margin: auto 5% 15px 5%;
+    }
+
+    .video__title {
+      font-size: 30px;
+      line-height: 37px;
+    }
+
+    .video__subtitle {
+      font-size: 20px;
+      line-height: 25px;
+    }
+
+    .video__foto img {
+      text-align: center;
+      width: 681px;
+      height: 374px;
+    }
+
+    .video__play {
+      width: 48px;
+      height: 48px;
+      box-shadow: 0px 0px 0px 5px rgba(255, 255, 255, 0.3);
+    }
+
+    .triangle {
+      border-top: 6px solid transparent;
+      border-left: 9px solid #7f7f7f;
+      border-bottom: 6px solid transparent;
+    }
+
+    /* Story */
+    .story {
+      background-color: black;
+      width: 100%;
+      margin: 0;
+      padding-bottom: 100px;
+    }
+
+    .story-box {
+      width: 350px;
+      margin: 0 3% 0 5% ;
+    }
+
+    .story-box:nth-child(n) {
+      background-size: 313px 165px;
+    }
+
+    .story-box:nth-child(3) {
+      display: none;
+    }
+
+    .story-box__title {
+      color: white;
+      padding-top: 25px;
+      font-size: 25px;
+      line-height: 24px;
+    }
+
+    .story-box__subtitle {
+      color: white;
+      font-size: 20px;
+      line-height: 25px;
+    }
+
+    .story-box__more {
+      color: white;
+      font-size: 20px;
+      line-height: 19px;
+    }
+
+    .story-box__date {
+      font-size: 15px;
+    }
+
+    /* Gallery */
+    .gallery  {
+      background-color: black;
+      width: 100%;
+      clip-path: polygon(
+        0 0, /* лево верх */
+        100% 0, /* право верх */
+        100% 35% , /* право низ */
+        0 30% /* лево низ */
+        );
+      }
+
+      .gallery {
+        max-width: 680px;
+      }
 
 
+      .gallery__fotos {
+        flex-wrap: wrap;
+        justify-content: center;
+      }
 
-}
+      .gallery__foto {
+        width: 170px;
+        height: 170px;
+      }
+
+      .gallery__foto:nth-child(8) {
+        display: initial;
+      }
+
+      .gallery__tag {
+        font-size: 30px;
+        line-height: 29px;
+        font-weight: 700;
+        color: white;
+      }
+
+      /* Footer */
+      .footer {
+        height: 240px;
+
+      }
+
+      .footer__columns {
+        width: 85%;
+      }
+    }
+
+
+    /* Tablet  */
+    @media (max-width: 690px) {
+    }
